<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/bg_linear_layout1">

                <ImageView
                    android:id="@+id/logo_header_imageview_1"
                    android:layout_width="@dimen/imgview_item_width"
                    android:layout_height="@dimen/imgview_item_height"
                    android:layout_marginBottom="@dimen/imgview_item_marginbottom"
                    android:layout_marginLeft="@dimen/imgview_item_marginleft"
                    android:layout_marginRight="@dimen/imgview_item_marginright"
                    android:layout_marginTop="@dimen/imgview_item_margintop"
                    android:contentDescription="@string/txt_tbl_header_logo_alt1"
                    android:src="@mipmap/ic_logo_newsapp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_linear_layout1"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_linear_layout1">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_linear_layout1"
                        android:padding="@dimen/tbl_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:textSize="@dimen/txtview_txt_size2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:text="@string/txt_tbl_cal_items_downloads1"
                            android:textColor="@color/txt_item_color1"
                            android:textSize="@dimen/txtview_txt_size2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:text="@string/txt_tbl_cal_items_articles1"
                            android:textColor="@color/txt_item_color1"
                            android:textSize="@dimen/txtview_txt_size2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:text="@string/txt_tbl_cal_items_feeds1"
                            android:textColor="@color/txt_item_color1"
                            android:textSize="@dimen/txtview_txt_size2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_tbl_row1"
                        android:padding="@dimen/tbl_row_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:textSize="@dimen/txtview_txt_size1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:text="@string/txt_tbl_title_downloads1"
                            android:textAllCaps="false"
                            android:textColor="@color/txt_item_color2"
                            android:textSize="@dimen/txtview_txt_size1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:text="@string/txt_tbl_title_articles1"
                            android:textAllCaps="false"
                            android:textColor="@color/txt_item_color2"
                            android:textSize="@dimen/txtview_txt_size1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/txtview_padding_end"
                            android:paddingRight="@dimen/txtview_padding_right"
                            android:paddingStart="@dimen/txtview_padding_start"
                            android:paddingLeft="@dimen/txtview_padding_left"
                            android:text="@string/txt_tbl_title_feeds1"
                            android:textAllCaps="false"
                            android:textColor="@color/txt_item_color2"
                            android:textSize="@dimen/txtview_txt_size1" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/txtview_padding_end2"
                        android:paddingRight="@dimen/txtview_padding_right2"
                        android:paddingStart="@dimen/txtview_padding_start2"
                        android:paddingLeft="@dimen/txtview_padding_left2"
                        android:paddingTop="@dimen/txtview_padding_top2"
                        android:text="@string/txt_tbl_header_headline1"
                        android:textColor="@color/txt_item_color3"
                        android:textSize="@dimen/txtview_txt_size3" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutHeader"
            android:background="@color/bg_linear_layout2"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                style="@style/CategoryTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_item_height"
                android:layout_marginTop="@dimen/view_item_margin_top"
                android:background="@android:color/holo_green_dark"></View>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTabBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayoutTab"
            android:orientation="vertical"
            android:padding="@dimen/linear_layout_padding">

            <ListView
            android:id="@+id/sec_cpromos_news_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="@dimen/list_item_dividerheightof0dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_feeds"
            android:textAppearance="?android:textAppearanceMedium" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </RelativeLayout>
</ScrollView>